--- a/index.css
+++ b/index.css
@@ -5,7 +5,9 @@
 }
 
 body {
-    background: #005ce6;
+    background: #0F2027;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,7 +18,9 @@ body {
 }
 
 .container {
-    background: #ccc;
+    background: #0F2027;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right,  #203A43, #0F2027, #2C5364); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     width: 350px;
     max-width: 100%;
     border-radius: 10px;
@@ -29,7 +33,8 @@ body {
     border-bottom: 1px solid #efe;
 }
 
-.header h1{
+.header h3{
+    color: #efe;
     margin: 0;
     font-size: 30px;
 }
@@ -47,6 +52,7 @@ body {
 .form-control label {
     display: inline-block;
     margin-bottom: 0;
+    color: #fff;
     font-size: 18px;
 }
 
@@ -60,11 +66,11 @@ body {
 }
 
 .form-control.success input {
-    border-color: #09832f;
+    border-color: #006400;
 }
 
 .form-control.error input {
-    border-color: #fa3529;
+    border-color: #e60000;
 }
 
 .form-control i {
@@ -75,12 +81,12 @@ body {
 }
 
 .form-control.success i.fa-check-circle {
-    color: #09832f;
+    color: #006400;
     visibility: visible;
 }
 
 .form-control.error i.fa-exclamation-circle {
-    color: #fa3529;
+    color: #e60000;
     visibility: visible;
 }
 
@@ -92,16 +98,16 @@ body {
 }
 
 .form-control.error small {
-    color: #fa3529;
+    color: #e60510;
     visibility: visible;
 }
 
 button {
-    background: #358a13;
+    background: #006400;
     color: #fff;
     padding: 9px;
     width: 100%;
-    border: 1px solid #358a13;
+    border: 1px solid #006400;
     border-radius: 5px;
     font-size: 1.05rem;
     outline: none;
