--- a/index.css
+++ b/index.css
@@ -23,6 +23,7 @@ body {
     background: linear-gradient(to right,  #203A43, #0F2027, #2C5364); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     width: 350px;
     max-width: 100%;
+    min-height: 100%;
     border-radius: 10px;
     box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.36);
 }
